--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer utilities {
+    .scrollbar-thin::-webkit-scrollbar {
+      width: 8px;
+    }
+  
+    .scrollbar-thin::-webkit-scrollbar-thumb {
+      background-color: rgba(238, 240, 245, 0.656);
+    }
+  
+    .scrollbar-thin::-webkit-scrollbar-thumb:hover {
+      background-color:  rgba(238, 240, 245, 0.656);
+    }
+  
+    .scrollbar-thin::-webkit-scrollbar-track {
+      background-color: rgba(209, 213, 219, 0.5);
+    }
+  
+    .scrollbar-thin::-webkit-scrollbar-track:hover {
+      background-color: rgba(209, 213, 219, 0.8);
+    }
+  }
